test/tests/operators/from_http/from_http_error_missing_parser_pipeline.txt
error: required subpipeline was not provided
 --> tests/operators/from_http/from_http_error_missing_parser_pipeline.tql:5:1
  |
5 | from_http "http://example.com"
  | ^^^^^^^^^ 
  |
  = usage: from_http url:secret, [method=string, body=any, headers=record, tls=record, timeout=duration, metadata_field=field, error_field=field, paginate=any, connection_timeout=duration, max_retry_count=int, retry_delay=duration, encode=string, mode=string]
  = docs: https://docs.tenzir.com/reference/operators/from_http
